      should do something more specific once yarpc/yarpc.io#2 is resolved.
- [ ] Consider teaching abstract peer list to prefer the req.Peer if it is
      present and the corresponding peer is immediately available.
- [x] Revisit StreamMessage, which should probably be a yarpc.Buffer now,
      simplifying the gRPC binding.
- [x] Add support for yarpc.To and yarpc.ResponseFrom call options.

Encodings:
- [x] Drop raw encoding
- [x] Port JSON encoding
- [ ] Port Thrift encoding
      - [ ] Pull the default routing name from a Thrift annotation.
      - [ ] Add `sanitization_test.go` in plugin after TChannel is ported.
      - [ ] Revert yarpc plugin name from `thriftrw-plugin-yarpc2` to `thriftrw-plugin-yarpc`.
      - [ ] Port https://github.com/yarpc/yarpc-go/pull/1482/files into spring.
- [ ] Port / re-create Protobuf encoding
      - [x] Rewrite the protoc-gen-yarpc-go plugin.
      - [ ] Add end-to-end test that uses gRPC transport with protobuf encoding.
      - [ ] Explore threading the context in Protobuf code generation, i.e. in `Stream.Receive`.

Transports:
- [x] Port TChannel transport
      - [ ] Restore buffer pooling
      - [ ] Restore inbound_test.go
      - [ ] Restore handler_test.go
      - [ ] Restore outbound_test.go
      - [ ] Gracefully shut down: stop should block until context expires or all requests drain.
      - [ ] Add TChannel to gauntlet test
- [x] Port or recreate gRPC transport
      - [ ] Ecapsulate gRPC's TransportCredentials interface
            to avoid passing a direct dependency on grpc-go to
            YARPC dependees.
- [ ] Use `req` and `res` as variable names for consistency.
      - [x] HTTP
      - [x] TChannel
      - [x] gRPC

Peer Lists:
- [x] Port abstract peer list to v2/yarpcpeerlist
- [x] Port yarpcroundrobin
- [x] Port yarpcrandpeer
- [x] Port yarpcchoiceoftwo
- [x] Port yarpcfewestpending
- [ ] Port yarpchashring32
- [ ] Remove PendingRequestCount from Status